--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,10 @@ nav:
   - Home: index.md
   - Devops:
       - Jenkins:
-          - Configuração inicial: devops/configuracoes.md
-          - Pipelines: devops/pipeline-facilita.md
+          - Informações do Sistema: devops/jenkins/1_informacao-sistema.md
+          - Configuração do Ambiente: devops/jenkins/2_configuracao-ambiente.md
+          - Soluções de Problemas Comuns: devops/jenkins/3_solucoes-problemas.md
+          - Notas e Observações: devops/jenkins/4_notas.md
 
 theme:
   name: material
